create loading text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 	</head>
 	<body>
+		<div
+			class="container d-flex align-items-center justify-content-center"
+			style="height: 100vh"
+		>
+			<div class="row">
+				<div class="col-12 text-center">
+					<p class="loading-text text-uppercase">loading</p>
+				</div>
+			</div>
+		</div>
 		<script src="js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
