--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<div class="row">
 				<div class="col-12 text-center">
 					<p class="loading-text text-uppercase">loading</p>
+					<div class="blur-loading-screen"></div>
 				</div>
 			</div>
 		</div>
